fixing the font of the navbar to make it appear on safari.

--- a/webpagePrimer/styles.css
+++ b/webpagePrimer/styles.css
@@ -22,7 +22,7 @@ body {
     padding: 14px 20px;
     text-decoration: none;
     display: inline-block;
-    font: 1.8em 'Edwardian Script ITC';
+    font: 1.8em 'Edwardian Script ITC', cursive;
 }
 
 .navbar a:hover {
@@ -32,7 +32,7 @@ body {
 
 .Nav_Text {
     font-size: 40px;
-    font: 2.3em "Edwardian Script ITC";
+    font: 2.3em "Edwardian Script ITC", cursive;
     color: gold;
     margin: 0;
 }
